[package]
name = "alkanes"
version = "0.1.0"
edition = "2021"
description = "ALKANES metaprotocol indexer"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "crates/*"]

[dependencies]
anyhow = "1.0.90"
bitcoin = { version = "0.30.1", features = ["rand"] }
metashrew = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs" }
ordinals = { git = "https://github.com/kungfuflex/protorune-rs" }
protorune = { git = "https://github.com/kungfuflex/protorune-rs" }
protorune-support = { git = "https://github.com/kungfuflex/protorune-rs" }
alkanes-support = { path = "crates/alkanes-support" }
ruint = "1.12.3"
wasm-bindgen = "0.2.92"
byteorder = "1.5"
wasm-bindgen-test = "0.3.43"
wasmi = "0.37.2"
serde = "1.0.210"
hex = "0.4.3"
protobuf = "3.7.1"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Response", "Window"] }
js-sys = "0.3.72"
hex_lit = "0.1.1"

[dev-dependencies]
metashrew = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs", features = [
    "mock",
] }
protorune = { git = "https://github.com/kungfuflex/protorune-rs", features = [
    "test_utils",
] }
sample-alkane = { path = "crates/sample-alkane" }

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = "0.4.3"
