[package]
name = "alkanes"
version = "0.1.0"
edition = "2021"
description = "ALKANES metaprotocol indexer"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "crates/*"]

[features]
test = []
proxy = ["test"]
owned_token = ["test"]
auth_token = ["owned_token"]
genesis_alkane = []
genesis_protorune = []
amm_pool = ["auth_token"]
orbital = []
all = []


[dependencies]
anyhow = "1.0.90"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew = { path = "crates/metashrew" }
metashrew-support = { path = "crates/metashrew-support" }
ordinals = { path = "crates/ordinals" }
protorune = { path = "crates/protorune" }
protorune-support = { path = "crates/protorune-support" }
alkanes-support = { path = "crates/alkanes-support" }
ruint = "1.12.3"
wasm-bindgen = "0.2.92"
byteorder = "1.5"
wasm-bindgen-test = "0.3.43"
wasmi = "0.37.2"
serde = "1.0.210"
hex = "0.4.3"
protobuf = "3.7.1"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Response", "Window"] }
js-sys = "0.3.72"
hex_lit = "0.1.1"

[dev-dependencies]

alkanes = { path = ".", features = [
    "auth_token",
    "genesis_alkane",
    "genesis_protorune",
    "amm_pool",
    "orbital",
] }
metashrew = { path = "crates/metashrew", features = ["test-utils"] }
protorune = { path = "crates/protorune", features = ["test-utils"] }


[build-dependencies]
anyhow = "1.0.90"
protobuf-codegen = "3.4.0"
flate2 = "1.0.34"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = "0.4.3"
