[package]
name = "alkanes-std-auth-token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { path = "../alkanes-runtime" }
alkanes-support = { path = "../alkanes-support" }
anyhow = "1.0.91"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew-support = { path = "../metashrew-support" }
protorune-support = { path = "../protorune-support" }
