[package]
name = "alkanes-std-merkle-distributor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { path = "../alkanes-runtime" }
alkanes-support = { path = "../alkanes-support" }
anyhow = "1.0.91"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew-support = { path = "../metashrew-support" }
num = "0.4.3"
protorune-support = { path = "../protorune-support" }
ordinals = { path = "../ordinals" }
rs_merkle = "1.4.2"
ruint = "1.12.3"
