[package]
name = "alkanes-support"
version = "0.1.0"
edition = "2021"
description = "ALKANES support"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.90"
protorune-support = { path = "../protorune-support" }
metashrew-support = { path = "../metashrew-support" }
bitcoin = { version = "0.32.4", features = ["rand"] }
serde = "1.0.213"
flate2 = "1.0.34"
protobuf = "3.7.1"

[build-dependencies]
anyhow = "1.0.90"
protobuf-codegen = "3.4.0"
flate2 = "1.0.34"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = "0.4.3"
