[package]
name = "alkanes"
version = "0.1.0"
edition = "2021"
description = "ALKANES metaprotocol indexer routines"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = []
proxy = ["test"]
owned_token = ["test"]
auth_token = ["owned_token"]
genesis_alkane = []
regtest = []
genesis_protorune = []
amm_pool = ["auth_token"]
amm_factory = ["auth_token"]
amm = ["amm_pool", "amm_factory"]
orbital = []
all = []
minimal = ["refunder", "merkle_distributor", "free_mint", "upgradeable", "proxy"]
refunder = []
merkle_distributor = []
free_mint = []
upgradeable = []


[dependencies]
anyhow = "1.0.90"
num = "0.4.3"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
ruint = "1.12.3"
wasm-bindgen = "0.2.95"
byteorder = "1.5"
wasm-bindgen-test = "0.3.43"
wasmi = "0.37.2"
serde = "1.0.210"
hex = "0.4.3"
protobuf = "3.7.1"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Response", "Window"] }
js-sys = "0.3.72"
hex_lit = "0.1.1"

[dev-dependencies]

alkanes = { path = ".", features = [
    "genesis_alkane",
    "genesis_protorune",
    "amm",
    "orbital",
    "auth_token",
    "minimal"
] }
metashrew = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }
protorune = { git = "https://github.com/kungfuflex/alkanes-rs", features = ["test-utils"] }


[build-dependencies]
anyhow = "1.0.90"
protobuf-codegen = "3.4.0"
flate2 = "1.0.34"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
hex = "0.4.3"
