[package]
name = "metashrew-support"
version = "0.1.0"
edition = "2021"
description = "metashrew-rs support library"
homepage = "https://github.com/sandshrewmetaprotocols/metashrew-rs"
repository = "https://github.com/sandshrewmetaprotocols/metashrew-rs"
license = "CC0-1.0"
rust-version = "1.74.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.90"
hex = "0.4.3"
