[package]
name = "protorune-support"
version = "0.1.0"
edition = "2021"
description = "protorunes support libs for Rust sources"
license = "MIT"
repository = "https://github.com/kungfuflex/protorune-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitcoin = { version = "0.32.4", features = ["rand"] }
serde = "1.0.210"
ordinals = { version = "0.0.10", path = "../ordinals" }
anyhow = "1.0.90"
metashrew-support = { path = "../metashrew-support" }
hex = "0.4.3"
protobuf = "3.6.0"

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
