[package]
name = "protorune"
version = "0.1.0"
edition = "2021"
description = "protorunes support libs for Rust sources"
license = "MIT"
repository = "https://github.com/kungfuflex/protorune-rs"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test_utils = []

[dependencies]
anyhow = "1.0.89"
bitcoin = { version = "0.30.1", features = ["rand"] }
metashrew = { path = "../metashrew", version = "0.1.0" }
metashrew-support = { path = "../metashrew-support", version = "0.1.0" }
protorune-support = { path = "../protorune-support", version = "0.1.0" }
ordinals = { version = "0.0.10", path = "../ordinals" }
ruint = "1.12.3"
wasm-bindgen = "0.2.95"
byteorder = "1.5"
wasm-bindgen-test = "0.3.43"
once_cell = "1.20.1"
hex = "0.4.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
protobuf = "3.6.0"

[dev-dependencies]
metashrew = { path = "../metashrew", features = [
    "mock",
] }
wasm-bindgen-cli = "0.2.92"
getrandom = { version = "0.2.15", features = ["js"] }

[build-dependencies]
protobuf-codegen = "3.4.0"
protoc-rust = { version = "2.28.0" }
protoc-bin-vendored = "3.0.0"
