[package]
name = "sample-alkane"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
alkanes-runtime = { path = "../alkanes-runtime" }
alkanes-support = { path = "../alkanes-support" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew-rs" }
